--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.3
   cloud_firestore: ^0.13.0+1
+  provider: ^4.0.2
+  flutter_spinkit: ^4.1.1+1
 
 dev_dependencies:
   flutter_test:
